--- a/libsys/assets/css/styles.css
+++ b/libsys/assets/css/styles.css
@@ -193,6 +193,7 @@ footer > div:last-child {
 @media only screen and (min-width: 768px) {
     body {
         font-size: 16px;
+        overflow-x: hidden;
     }
 
     #menu-mask,
@@ -217,6 +218,7 @@ footer > div:last-child {
         padding: 0 16px;
         width: 300px;
         height: 100%;
+        z-index: 1;
     }
 
     #upper-bar {
